<resources>
    <string name="app_name">Fitness Notes</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_workouts" translatable="false">Workouts</string>
    <string name="title_activity_exercises" translatable="false">Exercises</string>
    <string name="title_add_category_dialog" translatable="false">Add Category:</string>
    <string name="title_update_set" translatable="false">Update set</string>
    <string name="title_rename_category" translatable="false">Rename category</string>
    <string name="title_confirmation_ex" translatable="false">All recorded sets will be deleted. \n Are you sure?</string>
    <string name="title_confirmation_categ" translatable="false">All related exercises and recorded sets \n will be deleted. \n Are you sure?</string>
    <string name="title_rename_ex" translatable="false">Rename exercise</string>

    <string name="title_categories" translatable="false">Categories</string>
    <string name="title_settings" translatable="false">Settings</string>
    <string name="title_add_ex" translatable="false">Add Exercise</string>
    <string name="title_workout" translatable="false">Workout</string>
    <string name="title_backup_to" translatable="false">Backup to:</string>

    <string name="field_name" translatable="false">Name:</string>
    <string name="field_category" translatable="false">Category:</string>
    <string name="field_type" translatable="false">Type:</string>
    <string name="field_units" translatable="false">Reps/Dist:</string>
    <string name="field_hh" translatable="false">hh</string>
    <string name="field_mm" translatable="false">mm</string>
    <string name="field_ss" translatable="false">ss</string>

    <string name="item_reps" translatable="false">Reps:</string>
    <string name="item_time" translatable="false">Time:</string>
    <string name="item_notes" translatable="false">Notes:\u0020</string>
    <string name="item_locally" translatable="false">Locally</string>
    <string name="item_share" translatable="false">Share</string>

    <string name="item_cancel">Cancel</string>
    <string name="item_save" translatable="false">Save</string>
    <string name="item_view_workout" translatable="false">View Workout</string>
    <string name="item_clear" translatable="false">Clear</string>
    <string name="item_delete_set" translatable="false">Delete set</string>
    <string name="item_delete_exercise" translatable="false">Delete exercise</string>
    <string name="item_delete_category" translatable="false">Delete category</string>
    <string name="item_update_set" translatable="false">Update set</string>
    <string name="item_update" translatable="false">Update</string>
    <string name="item_rename" translatable="false">Rename</string>
    <string name="item_delete" translatable="false">Delete</string>

    <string name="item_backup_data">Backup</string>
    <string name="item_restore_data">Restore</string>
    <string name="item_delete_data">Delete workout history</string>

    <string name="item_backup_description">Backup all data locally or to a cloud</string>
    <string name="item_restore_description">Restore saved data from backup</string>
    <string name="item_delete_description">Delete workout data</string>


    <string name="toast_new_category">New category: </string>
    <string name="toast_created">created</string>
    <string name="toast_please_enter_category" translatable="false">Please enter category name</string>
    <string name="toast_please_fill_fields" translatable="false">Please fill all fields</string>
    <string name="toast_category_already_exist">Category already exists</string>
    <string name="toast_ex_name_already_exist">Exercise already exists</string>
    <string name="toast_please_enter_valid_values">Please enter valid values</string>

    <string name="snackbar_set_saved">Set is saved</string>
    <string name="snackbar_set_updated">Set is updated</string>


    <string name="sp_please_select">- Please select -</string>
    <string name="sp_weight_reps">Weight and Reps</string>
    <string name="sp_dist_time">Distance and Time</string>
    <string name="sp_time">Time</string>
    <string name="sp_reps">Reps</string>

    <string name="tab_track">Track</string>
    <string name="tab_history">History</string>

    <string name="hint_units">e.g. kg, lb for weight, km, mi for distance</string>


    <string name="weight">Weight:</string>
    <string name="reps">Reps:</string>
    <string name="note">Note:</string>
    <string name="time">Time:</string>

    <string name="table_exercises" translatable="false">EXERCISES</string>
    <string name="table_sets" translatable="false">SETS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
