<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <Button
        android:id="@+id/buttonUpdateSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/button_border"
        android:text="@string/item_update_set" />

    <Button
        android:id="@+id/buttonModifyDleteSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:text="@string/item_delete_set" />

    <Button
        android:id="@+id/buttonModifyCancel"
        android:layout_width="@dimen/buttons_modify_set_width"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:text="@string/item_cancel" />
</LinearLayout>