<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/saveSetConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/divider11"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginStart="@dimen/divider_margin"
        android:layout_marginTop="@dimen/new_set_margin_top"
        android:background="@color/colorActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/unitsAmountLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/divider_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider11">

        <TextView
            android:id="@+id/unitsTextView"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:text="@string/field_units"
            android:textSize="@dimen/textview_text_size" />

        <EditText
            android:id="@+id/unitsAmountEditText"
            android:layout_width="164dp"
            android:layout_height="52dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="number"
            android:textSize="@dimen/textview_text_size" />
    </LinearLayout>

    <View
        android:id="@+id/divider12"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginStart="@dimen/divider_margin"
        android:background="@color/colorActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unitsAmountLayout" />

    <View
        android:id="@+id/divider13"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginStart="@dimen/divider_margin"
        android:layout_marginTop="44dp"
        android:background="@color/colorActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider12" />


    <LinearLayout
        android:id="@+id/amountLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/divider_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider13">

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:text="Amount:"
            android:textAlignment="textEnd"
            android:textSize="@dimen/textview_text_size" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="164dp"
            android:layout_height="52dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="number"
            android:textSize="@dimen/textview_text_size" />

    </LinearLayout>

    <View
        android:id="@+id/divider14"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginStart="@dimen/divider_margin"
        android:background="@color/colorActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountLayout" />

    <View
        android:id="@+id/divider15"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginStart="@dimen/divider_margin"
        android:layout_marginTop="44dp"
        android:background="@color/colorActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider14" />

    <LinearLayout
        android:id="@+id/linearLayoutNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/divider_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider15">

        <TextView
            android:id="@+id/notesTextView"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/item_notes"
            android:textSize="@dimen/textview_text_size" />

        <EditText
            android:id="@+id/notesEditText"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textSize="@dimen/textview_text_size" />

    </LinearLayout>

    <View
        android:id="@+id/divider16"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:layout_marginStart="@dimen/divider_margin"
        android:background="@color/colorActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutNotes" />

    <LinearLayout
        android:id="@+id/setButtonslatout"
        android:layout_width="387dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider16">

        <Button
            android:id="@+id/buttonSaveSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBar"
            android:text="@string/item_save"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/buttonClearSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorActionBar"
            android:text="@string/item_clear"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTimeFields"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginStart="@dimen/divider_margin"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setButtonslatout">

        <TextView
            android:id="@+id/textViewTime1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/item_time"
            android:textSize="@dimen/textview_text_size" />

        <EditText
            android:id="@+id/editTextHH"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"

            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textSize="@dimen/textview_text_size" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/field_hh" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textSize="@dimen/textview_text_size" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/field_mm" />

        <EditText
            android:id="@+id/editTextSS"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textSize="@dimen/textview_text_size" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/field_ss" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
